# rusty-wave-collapse-function

./: :w  Cargo.toml  Justfile  Trunk.toml  prepare.sh
.github/workflows/: check.yml
.hooks/: pre-commit.sh
app/: Cargo.toml  index.html
app/src/: main.rs  tiles.rs
core/: Cargo.toml
core/src/: field.rs  lib.rs  macros.rs  side.rs  simple_tile.rs  tile.rs  wfc.rs
core/src/tiles/: mod.rs
visualizer/: Cargo.toml
visualizer/src/: lib.rs  macros.rs  main.rs  renderable_tiles.rs
visualizer/src/components/: field_grid.rs  field_grid_css.rs  grid_tile.rs  grid_tile_css.rs  heading.rs  heading_css.rs  mod.rs
visualizer/src/js/: macros.rs  mod.rs
visualizer/src/pages/: index.rs
