[package]
name = "f4n-wcf-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
wasm-bindgen = { version = "0.2.83", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]
