[package]
name = "f4n-wcf-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
f4n-wcf-core = { path = "../core" }
stylist = { version = "0.10.1", features = ["macros"] }
once_cell = "1.16.0"
wasm-bindgen = { version = "0.2.83" }
itertools = "0.10.5"
